<resources>
    <string name="app_name">IBAIS UNIVERSITY</string>
    <string name="large_text1">
        "IBAIS University IBAIS(International Business Administration and Information System) University is a Private and non-profit educational institution in Bangladesh. The Government of the People’s Republic of Bangladesh approved license to IBAIS University in August 2002 to function under the Private University Act of 1992 and as amended in 1998."
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Messages</string>
    <string name="large_text2">
        "Message from the Desk of the Chairman:"
    </string>
    <string name="large_text3">
        "To look back over our shoulder, IBAIS University was established in 2002 as an enterprise of IBAIS Limited, a Joint Stock Company, registered under the Company Act. In more than a decade, we have come a long way and we can be proud of our achievements. The full potentials however could not be exploited.
In the meantime, IBAIS University Trust has been established in line with the Private University Act 2010. The University has attained a new height under the dynamic leadership of professional Trustees. As required by the UGC, the management is taking effective measures to establish the University at its own land. We sincerely adhere to the Private University Act and the UGC rules and regulations to ensure professional conduct of the University affairs.
Located at the heart of Dhaka Metropolis, our University boasts of an array of renowned and resourceful teachers with unique academic background. Committed to quality education, IBAISU is a habitat of excellent academic environment. Our well-designed programs have opened a new vista of higher education to the learners to lead them to the most enviable position in life. All the departments of IBAIS University are unique in providing the best education through modern teaching methods.
Like other facilities, the University library is also full of latest books and journals. Teachers and students are found to swarm around the library spending hours together. Our Labs are equipped with latest facilities to meet the demand of the teachers and the students.
This Prospectus is published mainly for the Students, the Guardians, and the Academics who can easily focus on different modules and programs of the University. It also contains a brief outline of the University, its Faculties and how the administration works.  I am confident that it will be of great help to the students, parents, media, and academics to make an overall appraisal of the University.
Welcome to the world of IBAIS University. We are all set to make a history and march ahead to a still brighter level of success.
        Showkat Aziz (Russell)
        Vice-Chairman
        Board of Trustees"
    </string>
    <string name="large_text4">
        "Message from the Vice-Chancellor(Designate):"
    </string>
    <string name="large_text5">
        "Dear Students,
It is my pleasure to welcome you to the International Business Administration and Information System (IBAIS) University. It is one of the pioneering and front ranking private universities of Bangladesh. Its primary mission is to impart and disseminate relevant, appropriate, and quality education to our promising young generation. I appreciate your decision to select IBAIS University as your academic home for higher education.
IBAIS University ensures the students uninterrupted, meaningful, pragmatic, and job-oriented education. I am happy that these qualities are observed and acclaimed by your caring parents and guardians. As we continue our relentless efforts to making IBAISU an excellent institution, we can hope that more students will choose this university to have higher education in a congenial environment.
Under the inspired guidance of the new management and dynamic leadership of Mr. Showkat Aziz (Russell), IBAIS University is progressing in a determined way towards the coveted excellence and you students are our comrades in this noble venture. God-willing, we will soon have our exclusive permanent facilities built on our own land.
Our undergraduate and postgraduate programs aim to prepare our students for this increasingly global and highly competitive world. The courses offered are IT, Computer Science, Electrical and Computer Engineering, Electrical and Electronic Engineering, Business Administration, Economics, Tourism and Hotel Management, English Literature, Business English, and Honors in Law. In addition, we plan to introduce two-year law course very soon. IBAIS University has rich library and lab facilities to conduct practical classes.
We try to develop students’ potential and expand their horizons through co-curricular activities such as seminars, workshops, symposiums, debates, cultural events, and educational tours. These add to their maturity and prepare them to make valuable contribution to our nation building efforts. We graciously invite you to IBAIS University family and to see what our highly qualified and skilled faculties can offer to make your academic life fruitful and enjoyable. We are always ready to receive you with open hearts and guide you to attain your goals.
Learn, work diligently, and thrive!  I wish you all the very best.
        Professor Dr. M. Delwar Hussain"
    </string>
    <string name="large_text6">
        "Message from the Vice-Chairman:"
    </string>
    <string name="large_text7">
        "It’s a great delight for me to welcome you to the IBAIS (International Business Administration and Information System) University, a leading private sector University in Bangladesh.
 In the present scenario of Bangladesh, choosing the right university is one of the most challenging decisions you will have to take. If you carefully compare your choices, you will find real differences among universities and those differences are vital. The university you will choose should match your goals, your values and your vision.
Academic programs of IBAIS University are organized under three faculties in seven departments. These are English, Law, Tourism and Hotel Management., Electrical and Electronic Engineering, Computer Science and Engineering, Business Administration and Economics.
In reviewing our prospectus, you will see broad range of educational opportunities offered here. Our programs emphasize hand-on learning as a way to build your skills better. This university strives to provide quality education at moderate cost to meet the global demand. You can be sure that the IBAIS University is one of the most dynamic institutions in Bangladesh.
If you go through the general information of IBAIS University, you will find the goals, mission, guiding values, challenges, and scope of the University.
In conclusion, I would like to assure the students that it is our goal to enable them to enter the world as a leader who will make a difference in everything that they encounter in their future professional life. I hope at IBAIS University the students will attain all that they dream of.
        M. Kawser H. Comet
        Vice-Chairman
        Board of Trustees"
    </string>
    <string name="large_text8">
        "Message from the Pro Vice-Chancellor(Designate):"
    </string>
    <string name="large_text9">
        "It is my profound honor and privilege to welcome you all on behalf of IBAIS University, an institution which has already proved its status as a place for higher education and research. As Education is the prime concern of any country, IBAIS University has got all the potential to become a center of excellence. The IBAIS University authority, Faculty members and Administration are sincere enough to impart quality higher education. This sincerity is reflected in the syllabuses and curricula of different disciplines on which we provide appropriate modern education.\n"
        "In the present day world as always, knowledge rather than physical resources is the main driver of development. And IBAIS University can be considered as a true center of excellence. Our University has been pleased to contribute to the shaping of government’s policy on ways in which higher education can play a key role in the creation of a peaceful and prosperous country. What makes it so special is the true enthusiasm of the students. It is in this very context of wisdom conservation, knowledge generation, intellectual participation and partnership, IBAIS University endeavors its best to introduce a series of modern, innovative and conventional academic programs.\n"
        "The students organize and participate in different programs and festivals all over the year, which help them grow as true citizens of the country and the globe. They also participate in different social activities. Sincere attention is given to all and they have already proved their worth both in national and international job markets. The main idea is to go on generating critical masses that would blend with the newer frontiers of knowledge and lead the nation to global heights. We are very conscious in taking appropriate steps for the uplift of overall education level of the university to keep pace with the ever changing world of knowledge and wisdom.
        Professor Dr. Engr.Md.Humayn Kabir"
    </string>
    <string name="title_activity_main3">University Profile</string>
    <string name="large_text64">
        "Special Thanks To:"
    </string>
    <string name="large_text65">
        "Dr. Md.Akther Hossain\n"
        "Head, Dept. of Computer Science and Engineering"
    </string>
    <string name="large_text66">
        "Md.Shisir Mia\n"
        "Lecturer,Dept. of Computer Science and Engineering"
    </string>
    <string name="large_text70">
        "FACULTY OF SCIENCE AND ENGINEERING"
    </string>
    <string name="large_text71">
        "MSCS(Direct)"
    </string>
    <string name="large_text72">
        "B.Sc. in CS/CSE/IT or equivalent."
    </string>
    <string name="large_text73">
        "MSCS (Executive)"
    </string>
    <string name="large_text74">
        "B.Sc. in Engineering/Mathematics / Statistics/Physics/Applied Physics/ Electronic or minimum Bachelor Degree with Diploma in Computer Science/Engineering or 4 years of working experiences in relevant fields."
    </string>
    <string name="large_text75">
        "MSCS(Pre-requisite)"
    </string>
    <string name="large_text76">
        "Minimum Bachelor Degree with computer literacy."
    </string>
    <string name="large_text77">
        "MSCSE"
    </string>
    <string name="large_text78">
        "B.Sc. in Computer Science and Engineering."
    </string>
    <string name="large_text79">
        "FACULTY OF BUSINESS AND ECONOMICS"
    </string>
    <string name="large_text80">
        "MBA (Direct)"
    </string>
    <string name="large_text81">
        "BBA/M.Com/Bachelor’s Degree with Post Graduate Diploma in MGT/FIN/MKT/ACT/PMGT."
    </string>
    <string name="large_text82">
        "MBA(Executive)"
    </string>
    <string name="large_text83">
        ""B.Com. (Honors)/Master’s/B.Sc.Engineering/ MBBS or Bachelor Degree with 4 years of experiences in relevant fields.
    </string>
    <string name="large_text84">
        "MBA(Pre-requisite)"
    </string>
    <string name="large_text85">
        "BA/B.Com/B.Sc. or its equivalent."
    </string>
    <string name="large_text86">
        "FACULTY OF HUMANITIES AND LAW"
    </string>
    <string name="large_text87">
        "MA in English(01 Year)"
    </string>
    <string name="large_text88">
        "Minimum CGPA 2.5 in Bachelor Degree in English Literature/Language/Applied Linguistics/TEFL/TESL/TESOL or an equivalent degree from an approved university."
    </string>
    <string name="large_text89">
        "MA in English(02 years)"
    </string>
    <string name="large_text90">
        "Students having Graduation from any discipline."
    </string>
</resources>