<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="bd.edu.ibaisuniv.ibaisuniversity.ibaisuniversity.MainActivity35"
    tools:showIn="@layout/activity_main35">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Space
                    android:layout_width="1dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/large_text70"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:gravity="center"
                    android:textColor="#000000"/>
                <Space
                    android:layout_width="1dp"
                    android:layout_height="10dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/TextView1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/large_text71"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:gravity="center"
                    android:textColor="#000000"
                    android:background="#CEF6F5"/>
                <Space
                    android:layout_width="1dp"
                    android:layout_height="10dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/TextView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/large_text72"
                    android:textStyle="italic"
                    android:textSize="25sp"
                    android:gravity="center"
                    android:textColor="#000000"
                    android:background="#CEF6F5"/>

                <Space
                    android:layout_width="1dp"
                    android:layout_height="25dp"
                    android:layout_weight="1"
                    />

                <TextView
                    android:id="@+id/TextView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/large_text73"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:gravity="center"
                    android:textColor="#000000"
                    android:background="#CEF6F5"/>

                <Space
                    android:layout_width="1dp"
                    android:layout_height="10dp"
                    android:layout_weight="1"
                    />

                <TextView
                    android:id="@+id/TextView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/large_text74"
                    android:textStyle="italic"
                    android:textSize="25sp"
                    android:gravity="fill"
                    android:textColor="#000000"
                    android:background="#CEF6F5"/>


                <Space
                    android:layout_width="1dp"
                    android:layout_height="25dp"
                    android:layout_weight="1"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/large_text75"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:gravity="center"
                    android:textColor="#000000"/>
                <Space
                    android:layout_width="1dp"
                    android:layout_height="10dp"
                    android:layout_weight="1"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/large_text76"
                    android:textStyle="italic"
                    android:textSize="25sp"
                    android:gravity="fill"
                    android:textColor="#000000"
                    android:background="#CEF6F5"/>

                <Space
                    android:layout_width="1dp"
                    android:layout_height="25dp"
                    android:layout_weight="1"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/large_text77"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:gravity="center"
                    android:textColor="#000000"
                    android:background="#CEF6F5"/>
                <Space
                    android:layout_width="1dp"
                    android:layout_height="10dp"
                    android:layout_weight="1"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/large_text78"
                    android:textStyle="italic"
                    android:textSize="25sp"
                    android:gravity="fill"
                    android:textColor="#000000"
                    android:background="#CEF6F5"/>

                <Space
                    android:layout_width="1dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/large_text79"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:gravity="center"
                    android:textColor="#000000"
                    android:background="#CEF6F5"/>
                <Space
                    android:layout_width="1dp"
                    android:layout_height="20dp"
                    android:layout_weight="1"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/large_text80"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:gravity="center"
                    android:textColor="#000000"
                    android:background="#CEF6F5"/>
                <Space
                    android:layout_width="1dp"
                    android:layout_height="10dp"
                    android:layout_weight="1"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/large_text81"
                    android:textStyle="italic"
                    android:textSize="25sp"
                    android:gravity="fill"
                    android:textColor="#000000"
                    android:background="#CEF6F5"/>

                <Space
                    android:layout_width="1dp"
                    android:layout_height="20dp"
                    android:layout_weight="1"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/large_text82"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:gravity="center"
                    android:textColor="#000000"
                    android:background="#CEF6F5"/>
                <Space
                    android:layout_width="1dp"
                    android:layout_height="10dp"
                    android:layout_weight="1"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/large_text83"
                    android:textStyle="italic"
                    android:textSize="25sp"
                    android:gravity="fill"
                    android:textColor="#000000"
                    android:background="#CEF6F5"/>
                <Space
                    android:layout_width="1dp"
                    android:layout_height="20dp"
                    android:layout_weight="1"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/large_text84"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:gravity="center"
                    android:textColor="#000000"
                    android:background="#CEF6F5"/>

                <Space
                    android:layout_width="1dp"
                    android:layout_height="10dp"
                    android:layout_weight="1"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/large_text85"
                    android:textStyle="italic"
                    android:textSize="25sp"
                    android:gravity="fill"
                    android:textColor="#000000"
                    android:background="#CEF6F5"/>
                <Space
                    android:layout_width="1dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/large_text86"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:gravity="center"
                    android:textColor="#000000"
                    android:background="#CEF6F5"/>
                <Space
                    android:layout_width="1dp"
                    android:layout_height="20dp"
                    android:layout_weight="1"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/large_text87"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:gravity="center"
                    android:textColor="#000000"
                    android:background="#CEF6F5"/>
                <Space
                    android:layout_width="1dp"
                    android:layout_height="10dp"
                    android:layout_weight="1"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/large_text88"
                    android:textStyle="italic"
                    android:textSize="25sp"
                    android:gravity="fill"
                    android:textColor="#000000"
                    android:background="#CEF6F5"/>
                <Space
                    android:layout_width="1dp"
                    android:layout_height="20dp"
                    android:layout_weight="1"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/large_text89"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:gravity="center"
                    android:textColor="#000000"
                    android:background="#CEF6F5"/>
                <Space
                    android:layout_width="1dp"
                    android:layout_height="10dp"
                    android:layout_weight="1"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/large_text90"
                    android:textStyle="italic"
                    android:textSize="25sp"
                    android:gravity="fill"
                    android:textColor="#000000"
                    android:background="#CEF6F5"/>




            </LinearLayout>

    </ScrollView>

</LinearLayout>
