<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="bd.edu.ibaisuniv.ibaisuniversity.ibaisuniversity.MainActivity2"
    tools:showIn="@layout/activity_main2">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/text1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:text="@string/large_text2"
                android:textSize="25sp"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="#000000"
                android:background="#E3CEF6"/>

            <TextView
                android:id="@+id/text2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="0dp"
                android:text="@string/large_text3"
                android:textSize="20sp"
                android:gravity="fill"
                android:textStyle="italic"
                android:layout_gravity="fill"
                android:textColor="#000000"
                android:background="#CEF6F5"/>
            <Space
                android:layout_width="1dp"
                android:layout_height="20dp"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/text3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:text="@string/large_text4"
                android:textSize="25sp"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="#000000"
                android:background="#E3CEF6"/>
            <TextView
                android:id="@+id/text4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="0dp"
                android:text="@string/large_text5"
                android:textSize="20sp"
                android:gravity="fill_horizontal"
                android:textStyle="italic"
                android:layout_gravity="fill"
                android:textColor="#000000"
                android:background="#CEF6F5"/>

            <Space
                android:layout_width="1dp"
                android:layout_height="20dp"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/text5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:text="@string/large_text6"
                android:textSize="25sp"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="#000000"
                android:background="#E3CEF6"/>

            <TextView
                android:id="@+id/text6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="0dp"
                android:text="@string/large_text7"
                android:textSize="20sp"
                android:gravity="fill_horizontal"
                android:textStyle="italic"
                android:layout_gravity="fill"
                android:textColor="#000000"
                android:background="#CEF6F5"/>

            <Space
                android:layout_width="1dp"
                android:layout_height="20dp"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/text7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:text="@string/large_text8"
                android:textSize="25sp"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="#000000"
                android:background="#E3CEF6"/>

            <TextView
                android:id="@+id/text8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="0dp"
                android:text="@string/large_text9"
                android:textSize="20sp"
                android:gravity="fill_horizontal"
                android:textStyle="italic"
                android:layout_gravity="fill"
                android:textColor="#000000"
                android:background="#CEF6F5"/>


        </LinearLayout>

    </ScrollView>

</LinearLayout>
